--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
 env:
   BUILD_DIR: ${{github.workspace}}/build
   QT_VERSION: '6.5.2'
-  QT_MODULES: 'qtimageformats'
+  QT_MODULES: 'qtimageformats qtopengl'
 
 jobs:
   build-msvc:
