--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/thirdparty/speedykeyv"]
 	path = src/thirdparty/speedykeyv
 	url = https://github.com/ozxybox/SpeedyKeyV
+[submodule "src/thirdparty/nodeeditor"]
+	path = src/thirdparty/nodeeditor
+	url = https://github.com/craftablescience/nodeeditor
