--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(entgraph
 set(PROJECT_NAME_PRETTY "EntGraph" CACHE STRING "" FORCE)
 set(PROJECT_ORGANIZATION_NAME "craftablescience" CACHE STRING "" FORCE)
 set(PROJECT_HOMEPAGE_URL_API "https://api.github.com/repos/craftablescience/entgraph" CACHE STRING "" FORCE)
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 include(GNUInstallDirs)
 
 # Options
@@ -15,9 +15,6 @@ option(ENTGRAPH_BUILD_INSTALLER "Build installer for ${PROJECT_NAME_PRETTY} appl
 set(CMAKE_SKIP_BUILD_RPATH FALSE)
 set(CMAKE_BUILD_RPATH_USE_ORIGIN TRUE)
 set(CMAKE_INSTALL_RPATH $ORIGIN)
-
-# SpeedyKeyV
-add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/thirdparty/speedykeyv")
 
 # Qt
 if(WIN32 AND NOT DEFINED QT_BASEDIR)
@@ -44,9 +41,24 @@ endif()
 # CMake has an odd policy that links a special link lib for Qt on newer versions of CMake
 cmake_policy(SET CMP0020 NEW)
 
+# Find Qt
+find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets OpenGL)
+
+# Set up automatic Qt stuff
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
+
+# SpeedyKeyV
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/thirdparty/speedykeyv")
+
+# QtNodes
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src/thirdparty/nodeeditor")
+set_target_properties(
+        QtNodes
+        PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
+        LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 
 # Config file
 configure_file(
@@ -60,10 +72,15 @@ configure_file(
 		"${CMAKE_CURRENT_SOURCE_DIR}/installer/deb/${PROJECT_NAME}.sh")
 
 # Add sources and create executable
-list(APPEND ${PROJECT_NAME}_SOURCES
+set(${PROJECT_NAME}_SOURCES
 		"${CMAKE_CURRENT_SOURCE_DIR}/res/res.qrc"
 
         "${CMAKE_CURRENT_SOURCE_DIR}/src/cfg/Config.h"
+
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/graph/EntityGraph.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/graph/EntityGraph.h"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/graph/EntityGraphModel.cpp"
+        "${CMAKE_CURRENT_SOURCE_DIR}/src/graph/EntityGraphModel.h"
 
 		"${CMAKE_CURRENT_SOURCE_DIR}/src/Main.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/src/Options.cpp"
@@ -78,16 +95,14 @@ endif()
 add_executable(
 		${PROJECT_NAME} WIN32
 		${${PROJECT_NAME}_SOURCES})
-
-# Final Qt setup
-find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets)
-target_link_libraries(${PROJECT_NAME} PRIVATE keyvalues Qt::Core Qt::Gui Qt::Widgets)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt::Core Qt::Gui Qt::Widgets Qt::OpenGL keyvalues QtNodes)
 target_include_directories(
 		${PROJECT_NAME} PRIVATE
 		"${QT_INCLUDE}"
 		"${QT_INCLUDE}/QtCore"
 		"${QT_INCLUDE}/QtGui"
-		"${QT_INCLUDE}/QtWidgets")
+		"${QT_INCLUDE}/QtWidgets"
+		"${QT_INCLUDE}/QtOpenGL")
 if(WIN32 AND MSVC)
 	target_link_options(
 			${PROJECT_NAME} PRIVATE
@@ -95,7 +110,7 @@ if(WIN32 AND MSVC)
 endif()
 
 # Set up install rules
-install(IMPORTED_RUNTIME_ARTIFACTS Qt6::Core Qt6::Gui Qt6::Widgets
+install(IMPORTED_RUNTIME_ARTIFACTS Qt6::Core Qt6::Gui Qt6::Widgets Qt6::OpenGL QtNodes
 		RUNTIME DESTINATION .
 		LIBRARY DESTINATION .)
 install(FILES
@@ -139,6 +154,7 @@ if(WIN32)
 	configure_file("${QT_BASEDIR}/bin/Qt6Core${QT_LIB_SUFFIX}.dll"    "${CMAKE_BINARY_DIR}/Qt6Core${QT_LIB_SUFFIX}.dll"    COPYONLY)
 	configure_file("${QT_BASEDIR}/bin/Qt6Gui${QT_LIB_SUFFIX}.dll"     "${CMAKE_BINARY_DIR}/Qt6Gui${QT_LIB_SUFFIX}.dll"     COPYONLY)
 	configure_file("${QT_BASEDIR}/bin/Qt6Widgets${QT_LIB_SUFFIX}.dll" "${CMAKE_BINARY_DIR}/Qt6Widgets${QT_LIB_SUFFIX}.dll" COPYONLY)
+	configure_file("${QT_BASEDIR}/bin/Qt6OpenGL${QT_LIB_SUFFIX}.dll"  "${CMAKE_BINARY_DIR}/Qt6OpenGL${QT_LIB_SUFFIX}.dll"  COPYONLY)
 
 	configure_file("${QT_BASEDIR}/plugins/imageformats/qjpeg${QT_LIB_SUFFIX}.dll" "${CMAKE_BINARY_DIR}/imageformats/qjpeg${QT_LIB_SUFFIX}.dll" COPYONLY)
 	configure_file("${QT_BASEDIR}/plugins/imageformats/qtga${QT_LIB_SUFFIX}.dll"  "${CMAKE_BINARY_DIR}/imageformats/qtga${QT_LIB_SUFFIX}.dll"  COPYONLY)
@@ -150,6 +166,7 @@ elseif(UNIX)
 	configure_file("${QT_BASEDIR}/lib/libQt6Core.so.6"    "${CMAKE_BINARY_DIR}/libQt6Core.so.6"    COPYONLY)
 	configure_file("${QT_BASEDIR}/lib/libQt6Gui.so.6"     "${CMAKE_BINARY_DIR}/libQt6Gui.so.6"     COPYONLY)
 	configure_file("${QT_BASEDIR}/lib/libQt6Widgets.so.6" "${CMAKE_BINARY_DIR}/libQt6Widgets.so.6" COPYONLY)
+	configure_file("${QT_BASEDIR}/lib/libQt6OpenGL.so.6"  "${CMAKE_BINARY_DIR}/libQt6OpenGL.so.6"  COPYONLY)
 	configure_file("${QT_BASEDIR}/lib/libQt6DBus.so.6"    "${CMAKE_BINARY_DIR}/libQt6DBus.so.6"    COPYONLY)
 
 	configure_file("${QT_BASEDIR}/lib/libQt6WaylandClient.so.6" "${CMAKE_BINARY_DIR}/libQt6WaylandClient.so.6" COPYONLY)
