fix(ci): remove clang from github actions, (too old)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,7 @@ jobs:
     strategy:
       matrix:
         build_type: [Debug, Release]
-        compiler: [gcc, clang]
+        compiler: [gcc]
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout Repository
