--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,7 @@ jobs:
     strategy:
       matrix:
         build_type: [Debug, Release]
-        compiler: [gcc, clang]
+        compiler: [gcc]
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout Repository
